Refactored into using Entity instead of embedded. Added semantic similarity. Lacks MUCH Testing..